--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@react-native-async-storage/async-storage": "^1.15.7",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "i18n-js": "^3.8.0",
+    "lodash.memoize": "^4.1.2",
     "moment": "^2.29.1",
     "react": "17.0.2",
     "react-native": "0.65.1",
+    "react-native-localize": "^2.1.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.6.0",
     "react-native-svg": "^12.1.1",
